fixed search bar background visibility on popups

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -474,3 +474,7 @@ img.dayTop {
     width: 300px;
   }
 }
+
+.bgOffWhite {
+  background-color: rgb(224, 224, 224);
+}
